# bsctl

./: .bsctl.yaml  .bsctl.yaml.example  .gitignore  Cargo.toml  README.md
.bsctl/: columns.ignore  columns.yaml  plugins.yaml
.bsctl/columns/: client-account.yaml  tenant.yaml
docs/: authentication.md  commands.md  custom-columns.md  plugin-definition.md
src/: auth.rs  client.rs  config.rs  display.rs  main.rs  mcp.rs  plugin.rs  service.rs
src/commands/: api.rs  catalog.rs  columns.rs  config_cmd.rs  mod.rs  search.rs  template.rs
src/plugin/: config.rs  executor.rs  help.rs  mod.rs
tests/: integration.rs  mcp_test.rs
