[package]
name = "bsctl"
version = "0.1.0"
edition = "2024"
description = "A CLI client for Backstage"
license = "MIT"
repository = "https://github.com/taku-xhift/bsctl"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
urlencoding = "2"
serde_yaml_neo = "0.11"
dirs = "6"
open = "5"
base64 = "0.22"
colored = "3"
terminal_size = "0.4"
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"


[dev-dependencies]
mockito = "1"

[profile.release]
lto = true
strip = true
