[package]
name = "bsctl"
version = "0.2.0"
edition = "2024"
description = "A CLI client and MCP server for Backstage"
license = "MIT"
repository = "https://github.com/totte-dev/bsctl"
homepage = "https://github.com/totte-dev/bsctl"
documentation = "https://github.com/totte-dev/bsctl/tree/main/docs"
readme = "README.md"
keywords = ["backstage", "cli", "mcp", "developer-portal", "catalog"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
urlencoding = "2"
serde_yaml_neo = "0.11" # Fork of deprecated serde_yaml; same API, actively maintained
dirs = "6"
open = "5"
base64 = "0.22"
colored = "3"
terminal_size = "0.4"
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1"


[dev-dependencies]
mockito = "1"

[profile.release]
lto = true
strip = true
